--- a/class.tex
+++ b/class.tex
@@ -191,7 +191,8 @@ operators of dimension five within the Standard Model.
 %
 \section{Introduction}
 
-	Every now and then theoretical and phenomenological reviews on 
+	Quite customary theoretical and phenomenological reviews on
+%	Every now and then theoretical and phenomenological reviews on 
 	Lorentz violation use effective higher dimensional operators coupled 
 	to background tensors to break Lorentz invariance.
 	Most developments consider only a sufficiently limited set
@@ -671,9 +672,6 @@ $	E_1^{\mu\nu\rho\lambda}\cdot
 	to this effect are $ \wt{c}_1^\mu $ and $ D_1^{\mu\nu\rho} $
 	which in this way generate extra corrections to themselves.
 
-	{\bf
-	The problem with the $ \wt{c}_1^\mu $ operator.
-	}
 	As we have admitted generic tensor structures to the theory
 	we need to ensure that the latter is free of quadratic divergencies.
 	It is obvious that quadratically divergent operators must necessarily
